--- a/src/Pages/SignupPage.module.css
+++ b/src/Pages/SignupPage.module.css
@@ -1,12 +1,13 @@
 .Form {
-  width: 40%;
-  margin-left: 30%;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .h1 {
   font-size: 50px;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .p {
@@ -22,4 +23,19 @@
   text-align: center;
   margin-top: 30px;
   font-size: 200px;
+}
+.icon-wrapper {
+  display: flex;
+}
+
+.text {
+  margin-left: 5px;
+  margin-top: 7px;
+}
+@media (max-width: 767px) {
+  .Form {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
