Finish avatar profile after signin

--- a/src/components/Message.module.css
+++ b/src/components/Message.module.css
@@ -1,6 +1,6 @@
 .form {
   position: relative;
-  width: 480px;
+  width: 50%;
   margin: 30px auto 20px auto;
   background: #fff;
   padding: 15px;
